[package]
name = "easycurses"
version = "0.9.0"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/easycurses-rs"
readme = "README.md"
keywords = ["curses", "tui"]
description = "A crate that makes working with curses easy."
license = "Unlicense"

[dependencies]
pancurses = "0.13"

[lib]
name = "easycurses"
path = "src/lib.rs"

[profile.dev]
panic = "unwind"

[profile.test]
panic = "unwind"

[profile.bench]
panic = "unwind"

[profile.release]
panic = "unwind"
